Reference the definition of a sample-frame in various operations on AudioData

--- a/index.src.html
+++ b/index.src.html
@@ -2088,7 +2088,7 @@ dictionary AudioDataInit {
 :: The sample-rate, in Hz, for this {{AudioData}}.
 
 : <dfn attribute for=AudioData>[[number of frames]]</dfn>
-:: The number of frames (samples per channel) for this {{AudioData}}.
+:: The number of [=frames=] for this {{AudioData}}.
 
 : <dfn attribute for=AudioData>[[number of channels]]</dfn>
 :: The number of audio channels for this {{AudioData}}.
@@ -2133,7 +2133,7 @@ dictionary AudioDataInit {
     {{AudioData/[[sample rate]]}}.
 
 : <dfn attribute for=AudioData>numberOfFrames</dfn>
-:: The number of frames (samples per channel) for this {{AudioData}}.
+:: The number of [=frames=] for this {{AudioData}}.
 
     The {{AudioData/numberOfFrames}} getter steps are to return
     {{AudioData/[[number of frames]]}}.
@@ -2190,8 +2190,8 @@ dictionary AudioDataInit {
     6. Let |planeFrames| be the region of |resource| corresponding to
         |options|.{{AudioDataCopyToOptions/planeIndex}}.
     7. Copy elements of |planeFrames| into |destination|, starting with the
-        frame positioned at |options|.{{AudioDataCopyToOptions/frameOffset}}
-        and stopping after |copyElementCount| elements have been copied.
+        [=frame=] positioned at |options|.{{AudioDataCopyToOptions/frameOffset}}
+        and stopping after |copyElementCount| samples have been copied.
 
 : <dfn method for=AudioData>clone()</dfn>
 :: Creates a new AudioData with a reference to the same [=media resource=].
@@ -2260,12 +2260,12 @@ dictionary AudioDataCopyToOptions {
 :: The index identifying the plane to copy from.
 
 : <dfn dict-member for=AudioDataCopyToOptions>frameOffset</dfn>
-:: An offset into the source plane data indicating which frame to begin
+:: An offset into the source plane data indicating which [=frame=] to begin
     copying from. Defaults to `0`.
 
 : <dfn dict-member for=AudioDataCopyToOptions>frameCount</dfn>
-:: The number of frames to copy. If not provided, the copy will include all
-    frames in the plane beginning with {{AudioDataCopyToOptions/frameOffset}}.
+:: The number of [=frames=] to copy. If not provided, the copy will include all
+    [=frames=] in the plane beginning with {{AudioDataCopyToOptions/frameOffset}}.
 
 ## Audio Sample Format ##{#audio-sample-formats}
 
